# agent-company-platform

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pytest.ini
apps/api/: pyproject.toml
apps/api/src/acp_api/: deps.py  events_bus.py  main.py  seed.py
apps/api/src/acp_api/routers/: crud.py  operations.py  platform.py  work.py  workers.py
apps/api/tests/: test_office_config.py  test_workers.py
apps/event-service/: pyproject.toml
apps/event-service/src/acp_event_service/: main.py
apps/web/: ambient.html  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: _redirects
apps/web/public/assets/: packs.json
apps/web/public/assets/core/: manifest.json
apps/web/public/assets/dept-data-science/: manifest.json
apps/web/public/assets/dept-research/: manifest.json
apps/web/src/: ambient-config.ts  ambient.ts  api.ts  entry.ts  main.ts  mock-overview.ts  scene.ts  style.css  vite-env.d.ts
apps/web/src/ui/: hud.ts
apps/web/tests/: ambient-config.test.ts
apps/worker/: pyproject.toml
apps/worker/src/acp_worker/: capabilities.py  cli.py  config.py  executors.py  local_log.py  main.py  state.py
apps/worker/tests/: test_capabilities.py  test_executors.py  test_state.py
docs/: architecture.md  audit-phase0.md  deployment-railway.md  pixel-engine-phaser-migration.md  plugins.md  providers-local-executors.md  providers.md  sessions-memory.md  spritesheets.md
docs/architecture/: campus-growth.md
docs/assets/: asset-manifest.md  character-system.md  limezu-installation.md  room-templates.md
docs/security/: threat-model.md
docs/workers/: windows-worker.md
plugins/data-science/: plugin.json
plugins/data-science/rooms/: data-lab-v1.json
plugins/game-development/: plugin.json
plugins/game-development/rooms/: game-studio-v1.json
plugins/research/: plugin.json
plugins/research/rooms/: library-v1.json
plugins/software-development/: plugin.json
plugins/software-development/rooms/: software-office-large-v1.json  software-office-small-v1.json
scripts/: dev.ps1  dev.sh  setup.ps1  setup.sh
services/provider-gateway/: pyproject.toml
services/provider-gateway/src/acp_provider_gateway/: main.py
services/provider-gateway/src/acp_provider_gateway/providers/: manual.py  mock.py
services/provider-gateway/src/acp_provider_gateway/providers/hermes/: __init__.py  adapter.py  client.py  contracts.py
services/provider-gateway/tests/: test_hermes_adapter.py
(+10 files in other folders)
