[project]
name = "acp-api"
version = "0.1.0"
description = "API cœur de l'Agent Company Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "acp-contracts",
    "acp-database",
    "acp-agent-sdk",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
