[project]
name = "acp-event-service"
version = "0.1.0"
description = "Diffusion temps réel des événements de l'Agent Company Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "acp-contracts",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
