[project]
name = "acp-worker"
version = "0.1.0"
description = "Worker simulé exécutant les task runs de l'Agent Company Platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "acp-contracts",
    "acp-event-sdk",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
